Fixed difficulty dropdown alignment and scoreboard
CSSSSSS

--- a/QuickDraw/src/main/webapp/styles.css
+++ b/QuickDraw/src/main/webapp/styles.css
@@ -67,6 +67,10 @@ td {
   padding-right: 5px;
 }
 
+body .ui-selectonemenu .ui-selectonemenu-label {
+  padding-top: 0px;
+}
+
 /*HEADERS*/
 h1{
   font-family: 'Jaldi', sans-serif;
@@ -233,6 +237,8 @@ body .ui-datascroller .ui-datascroller-content {
 .scoreboard {
   margin-left: 15px;
   border-radius: 5px 5px 5px 5px;
+  padding-left: 20%;
+  padding-bottom:10px;
 }
 
 .row {
